// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTablePage rendering render with Breadcrubs 1`] = `
<div
  className="tasks-table-wrapper"
>
  <ConfirmationModals
    modalID=""
    selectedRowsLen={0}
    setModalClosed={[MockFunction]}
    tasksActions={
      Object {
        "cancelConfirmModal": [Function],
        "cancelSelectedConfirmModal": [Function],
        "resumeConfirmModal": [Function],
        "resumeSelectedConfirmModal": [Function],
      }
    }
  />
  <PageLayout
    beforeToolbarComponent={
      <UNDEFINED
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
        parentTaskID={null}
      />
    }
    breadcrumbOptions={
      Object {
        "breadcrumbItems": Array [
          Object {
            "caption": "Tasks",
            "url": "/foreman_tasks/tasks",
          },
          Object {
            "caption": "action Name",
            "url": "/foreman_tasks/tasks/someid",
          },
          Object {
            "caption": "Sub tasks",
          },
        ],
      }
    }
    header="Tasks"
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "foreman_tasks/tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <ActionSelectButton
          disabled={true}
          onCancel={[Function]}
          onResume={[Function]}
        />
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      bulkCancel={[MockFunction]}
      bulkResume={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      itemCount={2}
      openClickedModal={[MockFunction]}
      openModal={[Function]}
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      parentTaskID={null}
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectAllRows={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="RESOLVED"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;

exports[`TasksTablePage rendering render with minimal props 1`] = `
<div
  className="tasks-table-wrapper"
>
  <ConfirmationModals
    modalID=""
    selectedRowsLen={0}
    setModalClosed={[MockFunction]}
    tasksActions={
      Object {
        "cancelConfirmModal": [Function],
        "cancelSelectedConfirmModal": [Function],
        "resumeConfirmModal": [Function],
        "resumeSelectedConfirmModal": [Function],
      }
    }
  />
  <PageLayout
    beforeToolbarComponent={
      <UNDEFINED
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
        parentTaskID={null}
      />
    }
    header="Tasks"
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "foreman_tasks/tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <ActionSelectButton
          disabled={true}
          onCancel={[Function]}
          onResume={[Function]}
        />
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      bulkCancel={[MockFunction]}
      bulkResume={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      itemCount={2}
      openClickedModal={[MockFunction]}
      openModal={[Function]}
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      parentTaskID={null}
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectAllRows={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="RESOLVED"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;
